Ensured there is always spacing between discussion filter and resolve discussions buttons

--- a/app/assets/stylesheets/pages/merge_requests.scss
+++ b/app/assets/stylesheets/pages/merge_requests.scss
@@ -828,10 +828,7 @@
 
   .discussion-filter-container {
     margin-top: $gl-padding-8;
-
-    @include media-breakpoint-up(md) {
-      padding-left: $gl-padding-8;
-    }
+    padding-right: $gl-padding-8;
   }
 }
 
